5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1637_1054.log
== TEST (2019-04-09 11:16:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print(p, "ponto nao pertence a reta")
	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:16:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print(p, "ponto nao pertence a reta")
	
-- EXECUTION TIME:
0.137278
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
23.0 ponto nao pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print(p.lower(, "ponto nao pertence a reta"))
	
-- ERROR:
File "XXXX", line 12
    print(p.lower(, "ponto nao pertence a reta"))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print(p, "ponto nao pertence a reta")
	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:19:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:19:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Determine X: "))
y = float(input("Determine Y: "))

p = (2*x + y)

if (p == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
	
-- EXECUTION TIME:
0.136003
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
